coming soon added to undone pages

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -107,7 +107,7 @@
                     </div>
                   </div>
         <br>
-                  <h2>Self Development</h2><!-- Headline -->
+                  <h2>Self Development [coming soon]</h2><!-- Headline -->
                   <p>A blog on things I am doing to improve my skillsets and personality to be able to effectively add value to my scope of influence.</p><!-- Description-->
                 </a>
                 </div>
@@ -119,7 +119,7 @@
                     </div>
                   </div>
         <br>
-                  <h2>AirtelTigo Projects</h2><!-- Headline -->
+                  <h2>AirtelTigo Projects  [coming soon]</h2><!-- Headline -->
                   <p>Projects done in as a worker at AirtelTigo (Airtel Ghana Limited) Telecommunications Company.</p><!-- Description -->
                 </div>
       <!-- Blog Entry 3 -->
@@ -144,7 +144,7 @@
                     </div>
                   </div>
         <br>
-                  <h2>Wink Initiatives projects</h2><!-- Headline -->
+                  <h2>Wink Initiatives projects  [coming soon]</h2><!-- Headline -->
                   <p>Projects that are focused at helping society through the launching of educational and professional initiatives.</p><!-- Description -->
                 </div>
       <!-- Blog Entry 5 -->
@@ -155,7 +155,7 @@
                     </div>
                   </div>
         <br>
-                  <h2>Volunteer Projects</h2>
+                  <h2>Volunteer Projects  [coming soon]</h2>
                   <p>Projects I have volunteers to contribute to and support.</p>
                 </div>
       <!-- Blog Entry 6 -->
@@ -166,7 +166,7 @@
                     </div>
                   </div>
         <br>
-                  <h2>Paid Gigs</h2><!-- Headline -->
+                  <h2>Paid Gigs  [coming soon]</h2><!-- Headline -->
                   <p>Small projects and companies I have worked with over a period.</p><!-- Description -->
                 </div>
               </li>
