--- a/index.html
+++ b/index.html
@@ -49,12 +49,16 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#work">Work Experience
                 <a class="dropdown-item" href="#projects">Projects</a>
-                <a class="dropdown-item" href="#apps">Apps</a>
                 <a class="dropdown-item" href="#leadership">Leadership</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#projects">Projects</a>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">Projects</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+              <a class="dropdown-item" href="#projects">Projects</a>
+              <a class="dropdown-item" href="#apps">Apps</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#certifications">Certifications</a>
@@ -64,6 +68,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="michaelaffare_resume.pdf" target="_blank">Resume</a>
           </li>
         </ul>
       </div>
@@ -901,7 +908,36 @@
             </div>
           </div>
 
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <div class="work-img">
+                <a href="https://docs.raptoreum.com/raptoreum-docs/getting-started/what-is-raptoreum/"
+                  target=" _blank"><img src="assets/img/projects/raptoreum.jpg" alt="" class="img-fluid">
+                </a>
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-12">
+                    <h2 class="w-title">Raptoreum - Private Smartnode Operator (live)</h2>
+                    <div class="w-more">
+                      <span class="w-date">November 2021</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
         </div>
+
+
+
+
+
+
       </div>
     </section>
 
