--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-12">
-                    <h2 class="w-title">AirtelTigo, 55 Company API Integration Projects</h2>
+                    <h2 class="w-title">AirtelTigo, API Integration Projects</h2>
                     <div class="w-more">
                       <span class="w-date">March 2022</span>
                     </div>
