added mailto to email

--- a/index.html
+++ b/index.html
@@ -1376,7 +1376,9 @@
                   </div>
                   <div class="more-info">
                     <ul class="list-ico">
-                      <li><span class="ion-email"></span> aaffare@gmail.com</li>
+                      <a href="mailto:aaffare@gmail.com">
+                        <li><span class="ion-email"></span>aaffare@gmail.com</li>
+                      </a>
                     </ul>
                   </div>
                   <div class="socials">
