--- a/index.html
+++ b/index.html
@@ -1376,7 +1376,7 @@
                   </div>
                   <div class="more-info">
                     <ul class="list-ico">
-                      <a href="mailto:aaffare@gmail.com">
+                      <a href="mailto:aaffare@gmail.com" target="_blank">
                         <li><span class="ion-email"></span>aaffare@gmail.com</li>
                       </a>
                     </ul>
