cmu ta roles linked

--- a/index.html
+++ b/index.html
@@ -447,17 +447,17 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-12">
-                    <h2 class="w-title">Graduate Teaching Assistant, <br> <span> Distributed Systems, Database
-                        Management, Telling Stories with Data</span></h2>
+                    <h2 class="w-title">Graduate Teaching Assistant,</h2>
                     <div class="w-more">
+                      <span> <a href="https://api.heinz.cmu.edu/courses_api/course_detail/95-702/"
+                          target="_blank">Distributed Systems</a>, <a
+                          href="https://api.heinz.cmu.edu/courses_api/course/syllabus/1108/" target="_blank">Database
+                          Management</a>
+                        , <a href="https://api.heinz.cmu.edu/courses_api/course/syllabus/143373/"
+                          target="_blank">Stories with Data</a> </span> <br>
                       <span class="w-date">Jan. 2023 - May. 2023</span>
                     </div>
                   </div>
-                  <!-- <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="ion-ios-plus-outline"></span></a>
-                    </div>
-                  </div> -->
                 </div>
               </div>
             </div>
@@ -473,6 +473,7 @@
                 <div class="row">
                   <div class="col-sm-10">
                     <h2 class="w-title"> Student Consultant, 3D Modeling <br> Intern, Data Science</h2>
+                    <br>
                     <div class="w-more">
                       <span class="w-date">May. 2022 - July. 2022</span>
                     </div>
