--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@
                   </div>
                   <div class="more-info">
                     <ul class="list-ico">
-                      <a href="mailto:aaffare@gmail.com" target="_blank">
+                      <a href="https://mail.google.com/mail/?view=cm&fs=1&to=aaffare@gmail.com" target="_blank">
                         <li><span class="ion-email"></span>aaffare@gmail.com</li>
                       </a>
                     </ul>
