--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
                       Hello!
                       I'm Michael Affare, a Computer Engineer with a Master's degree in Information Systems Management
                       from Carnegie Mellon University. I am currently leading a Data Analytics team at Great Lakes
-                      Behavioral Research Institute and consult as a Cloud Solutions Architect for the CMU research
+                      Behavioral Research Institute and consulting as a Cloud Solutions Architect for the CMU research
                       team at the Block Center for Technology & Society.
                     </p>
                     <p class="lead">
-                      I take pride in having managed large scale distributed technical projects in 3 continents.
+                      I take pride in having managed large scale distributed technical projects on 3 continents.
                     <ul>
                       <li><b>In Africa (Ghana)</b>
                         I led technical projects in the telecommunications space during the merger of Airtel and Tigo.
@@ -184,15 +184,17 @@
                       <li>
                         <b>In the United States</b>
                         I am consulting for the Allegheny County Department of Human Services using data analytics to
-                        drive-driven policy decisions whiles contributing to research on WorkForce Mobility and labour
+                        drive data-driven policy decisions whiles contributing to research on WorkForce Mobility and
+                        labour
                         analytics at CMU.
                       </li>
                     </ul>
                     </p>
                     <p class="lead">
-                      My passion to be able to support businesses with digital transformation solutions
+                      My passion is to support businesses with digital transformation solutions
                       that are automatable and leverage data analytics solutions to help improve productivity.
-                      I am a continuous learner and passionate about projects of
+                      I am a continuous learner and passionate about technical projects that improve optimization and
+                      data-driven decision-making.
 
                     </p>
                   </div>
