--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
   <link href="assets/css/style.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/06496a75d5.js" crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4774453216197450"
+    crossorigin="anonymous"></script>
 </head>
 
 <body id=" page-top">
