--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script src="https://kit.fontawesome.com/06496a75d5.js" crossorigin="anonymous"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4774453216197450"
     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-4774453216197450">
 </head>
 
 <body id=" page-top">
