added index file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script src="https://kit.fontawesome.com/06496a75d5.js" crossorigin="anonymous"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4774453216197450"
     crossorigin="anonymous"></script>
-    <meta name="google-adsense-account" content="ca-pub-4774453216197450">
+  <meta name="google-adsense-account" content="ca-pub-4774453216197450">
 </head>
 
 <body id=" page-top">
@@ -1060,6 +1060,39 @@
           </div>
         </div>
         <div class="row">
+
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="work-img">
+                <a href="https://www.credly.com/badges/df40be27-9776-4a48-afce-36969f34f0b7/public_url"
+                  target="_blank"><img src="assets/img/Certi/comptiasecurityplus.png" alt="" class="img-fluid"></a>
+              </div>
+              <div class="work-content">
+                <h2 class="w-title">CompTIA Security+</h2>
+                <p class="w-ctegory">
+                  Issued May 2024
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="work-img">
+                <a href="https://www.credly.com/badges/9757bb5b-50c6-470e-9f8f-93c008450c2f/public_url"
+                  target="_blank"><img src="assets/img/Certi/ccisc2.png" alt="" class="img-fluid"></a>
+              </div>
+              <div class="work-content">
+                <h2 class="w-title">ISC2 - Certified in Cybersecurity</h2>
+                <p class="w-ctegory">
+                  Issued May 2024
+                </p>
+              </div>
+            </div>
+          </div>
+
+
+
           <div class="col-md-4">
             <div class="service-box">
               <div class="work-img">
