--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       <div class="table-cell">
         <div class="container">
           <h1 class="intro-title mb-4">Michael Affare</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Data Analyst, Solutions
-              Architect - Cloud, Data Engineer</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Business Intelligence Engineer, Solutions
+              Architect - Cloud, Data Analyst</span><strong class="text-slider"></strong></p>
         </div>
       </div>
     </div>
