--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#about">About.</a>
+            <a class="nav-link js-scroll" href="#about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#education">Education</a>
