resume link updated

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <a class="nav-link js-scroll" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="michaelaffare_resume.pdf" target="_blank">Resume</a>
+            <a class="nav-link js-scroll" href="resume.pdf" target="_blank">Resume</a>
           </li>
         </ul>
       </div>
