wedding added timeline

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -22,6 +22,8 @@
   <script src="https://kit.fontawesome.com/06496a75d5.js" crossorigin="anonymous"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4774453216197450"
     crossorigin="anonymous"></script>
+  <script src="https://cdn.commoninja.com/sdk/latest/commonninja.js" defer></script>
+
   <meta name="google-adsense-account" content="ca-pub-4774453216197450">
 </head>
 
@@ -94,6 +96,9 @@
   </div>
 
   <main id="main">
+
+    <div class="commonninja_component pid-7fcce95e-2f94-4375-b13a-a9ebb6b82b0e"></div>
+
 
     <section id="about" class="about-mf sect-pt4 route">
       <div class="container">
