--- a/wedding/index.html
+++ b/wedding/index.html
@@ -8,17 +8,17 @@
   <title>Michael Affare</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-  <meta name="image" property="og:image" content="assets/img/Linkedin_bg.png">
+  <meta name="image" property="og:image" content="../assets/img/Linkedin_bg.png">
 
-  <link href="assets/img/icon.png" rel="icon">
+  <link href="../assets/img/icon.png" rel="icon">
 
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="../assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet">
+  <link href="../assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="../assets/vendor/venobox/venobox.css" rel="stylesheet">
 
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="../assets/css/style.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/06496a75d5.js" crossorigin="anonymous"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4774453216197450"
     crossorigin="anonymous"></script>
