--- a/wedding/index.html
+++ b/wedding/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Michael & Emily Wedding Timeline</title>
+  <title>Michael&Emily Wedding Info</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta name="image" property="og:image" content="../assets/img/Linkedin_bg.png">
