--- a/wedding/index.html
+++ b/wedding/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Michael&Emily Wedding Info</title>
+  <title>Seating | Michael&Emily Wedding Info</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta name="image" property="og:image" content="../assets/img/Linkedin_bg.png">
@@ -103,6 +103,7 @@
 
     .timeline-description {
       margin: 10px 0;
+      text-align: left;
     }
 
     .responsible-person {
@@ -159,6 +160,9 @@
             <a class="nav-link js-scroll" href="#reception">Reception</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll" href="#seating">Seating</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll" href="#traditional">Ghana Traditional</a>
           </li>
           <li class="nav-item">
@@ -175,7 +179,7 @@
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
-          <h1 class="intro-title mb-4">Michael and Emily </h1>
+          <h1 class="intro-title mb-4">Michael & Emily </h1>
           <p class="intro-subtitle"><span class="text-slider-items">04.27.2025, Carmel Indiana,
               Celebration</span><strong class="text-slider"></strong></p>
         </div>
@@ -407,6 +411,319 @@
         </div>
     </section>
 
+    <section id="seating" class="about-mf sect-pt4 route">
+      <div class="container">
+        <div class="title-box text-center">
+          <h3 class="title-a">Seating Chart</h3>
+
+          <div id="home" class="intro route bg-image" style="background-image: url(../assets/img/seating.jpg)">
+            <div class="overlay-itro"></div>
+            <div class="intro-content display-table">
+              <div class="table-cell">
+                <div class="container">
+                  <h1 class="intro-title mb-4">Seating</h1>
+                  <p class="intro-subtitle"><span class="text-slider-items">04.27.2025, Mingle,
+                      Enjoy</span><strong class="text-slider"></strong></p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="line-mf"></div>
+          <div class="row">
+            <div id="tables" class="timeline">
+
+              <div class="timeline-entry left">
+                <div class="timeline-title">Table 0</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Michael Affare</li>
+                    <li>Emily Affare</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry right">
+                <div class="timeline-title">Table 1</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Shivam Patel</li>
+                    <li>Gautam Naik</li>
+                    <li>Yirun Wang</li>
+                    <li>Josh Thompson</li>
+                    <li>Francis Anim</li>
+                    <li>Guest (Francis Anim)</li>
+                    <li>Yuchen Wu</li>
+                    <li>Gary (Zihao Zhu)</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry left">
+                <div class="timeline-title">Table 2</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>John Zanker</li>
+                    <li>Kristen Zanker</li>
+                    <li>Emma Zanker</li>
+                    <li>Lauren Berger</li>
+                    <li>Nate Berger</li>
+                    <li>Natalie Berger</li>
+                    <li>Leanna Berger</li>
+                    <li>Melody Berger</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry right">
+                <div class="timeline-title">Table 3</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Samuel Affare</li>
+                    <li>Nancy Affare | Sophia Affare (Baby)</li>
+                    <li>Jaydon Affare</li>
+                    <li>Daniel Hammond</li>
+                    <li>Nana Hammond</li>
+                    <li>Brendan Affare</li>
+                    <li>Anthony Twum-Barimah</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry left">
+                <div class="timeline-title">Table 4</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Jemima Watkins</li>
+                    <li>Florence Ofori</li>
+                    <li>Margeret Lawerteh</li>
+                    <li>Stephanie Watkins</li>
+                    <li>Sophia Watkins</li>
+                    <li>Kalvin Acheampong</li>
+                    <li>Yahaya Lukman</li>
+                    <li>Doris Acheampong</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry right">
+                <div class="timeline-title">Table 5</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Andrea Anderson</li>
+                    <li>Matt Anderson</li>
+                    <li>Maddie Welton</li>
+                    <li>Tim Welton</li>
+                    <li>Wendy Theissen</li>
+                    <li>Brent Theissen</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry left">
+                <div class="timeline-title">Table 6</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Rohith Gudipudi</li>
+                    <li>Elaine Price</li>
+                    <li>Erin Price</li>
+                    <li>Jeremy Caskey</li>
+                    <li>Adina Caskey</li>
+                    <li>Micah Caskey</li>
+                    <li>Julie Faieta</li>
+                    <li>Daniel Gonzalez</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry right">
+                <div class="timeline-title">Table 7</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Judith Anane</li>
+                    <li>Chanel Moore</li>
+                    <li>Kaaliyah King</li>
+                    <li>Victor Ewere</li>
+                    <li>Verissa Owusu</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry left">
+                <div class="timeline-title">Table 8</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Lisa Kreig</li>
+                    <li>Duncan MacDiarmid</li>
+                    <li>Dorcas Antwi</li>
+                    <li>Esther Darkwah</li>
+                    <li>Eric Darkwah</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry right">
+                <div class="timeline-title">Table 9</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Nakia Price</li>
+                    <li>Tonya Price</li>
+                    <li>Nakia Price</li>
+                    <li>Amaya Price</li>
+                    <li>Sydney Price</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry left">
+                <div class="timeline-title">Table 10</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Donella Locke</li>
+                    <li>James Tatum</li>
+                    <li>Shakoya Crenshaw</li>
+                    <li>Steve Locke</li>
+                    <li>Dominique McGordon</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry right">
+                <div class="timeline-title">Table 11</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Rodney Thomas</li>
+                    <li>Penny Thomas</li>
+                    <li>Rodney Thomas II</li>
+                    <li>Ryan Thomas</li>
+                    <li>Enaho Atamenwan</li>
+                    <li>Bryan Thomas</li>
+                    <li>Sonya Thomas</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry left">
+                <div class="timeline-title">Table 12</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Jovi Thomas Williams</li>
+                    <li>James Williams</li>
+                    <li>Fallon Morgan</li>
+                    <li>Sarah Thomas</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry right">
+                <div class="timeline-title">Table 13</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Sylvester Thomas</li>
+                    <li>Karen</li>
+                    <li>Kyle Harris</li>
+                    <li>Michael Harris</li>
+                    <li>Carol Howard</li>
+                    <li>Corey Howard</li>
+                    <li>Camille Thomas</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry left">
+                <div class="timeline-title">Table 14</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Maria Price</li>
+                    <li>Charles Price</li>
+                    <li>Charlie Price II</li>
+                    <li>Tracey Price</li>
+                    <li>Thomas Price</li>
+                    <li>Jeffrey Price</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry right">
+                <div class="timeline-title">Table 15</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Kimberly Thomas</li>
+                    <li>Marlena Byers</li>
+                    <li>Michael Byers</li>
+                    <li>Mark Allen Thomas</li>
+                    <li>Jenell Thomas</li>
+                    <li>Jaelynn Thomas</li>
+                    <li>Jenae Thomas</li>
+                    <li>Markus Thomas</li>
+                    <li>Tyrell Thomas</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry left">
+                <div class="timeline-title">Table 16</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Ronald Hall</li>
+                    <li>Martha Ferguson</li>
+                    <li>Victor Morrisey</li>
+                    <li>Theresa Morrisey</li>
+                    <li>Cheryl Sanders</li>
+                    <li>Carl Sanders</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry right">
+                <div class="timeline-title">Table 17</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Kilynn Trammell</li>
+                    <li>Kilynn Trammell's Guest</li>
+                    <li>Anyae Lane</li>
+                    <li>Byancah Lane</li>
+                    <li>Tyler Wright</li>
+                    <li>Tyler Wright's Wife</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry left">
+                <div class="timeline-title">Table 18</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Kia Thatch</li>
+                    <li>Arlie Lemkuler</li>
+                    <li>Brittany Gage</li>
+                    <li>Brandon Trammell</li>
+                    <li>Jessica Trammell</li>
+                    <li>Kamille Haley</li>
+                    <li>Immanuel Haley</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="timeline-entry right">
+                <div class="timeline-title">Table 19</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Aubrey Thornsbury</li>
+                    <li>Brandon Thornshbury</li>
+                    <li>DJ Gustave</li>
+                    <li>Donna Lennox</li>
+                  </ul>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+    </section>
 
 
     <section class=" paralax-mf footer-paralax bg-image sect-mt4 route"
@@ -438,11 +755,14 @@
                       <li><a href="https://www.linkedin.com/in/michaelaffare/" target="_blank"><span
                             class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
                       <li><a href="https://twitter.com/michaelaffare" target="_blank"><span class="ico-circle"><i
-                              class="ion-social-twitter"></i></span></a></li>
+                              class="ion-social-twitter"></i></span></a>
+                      </li>
                       <li><a href="https://github.com/michaelaffare" target="_blank"><span class="ico-circle"><i
-                              class="ion-social-github"></i></span></a></li>
+                              class="ion-social-github"></i></span></a>
+                      </li>
                       <li><a href="https://www.youtube.com/@michaelaffare" target="_blank"><span class="ico-circle"><i
-                              class="fa fa-youtube-play"></i></span></a></li>
+                              class="fa fa-youtube-play"></i></span></a>
+                      </li>
                       <li><a href="https://michaelaffare.medium.com/" target="_blank"><span class="ico-circle"><img
                               class="img-fluid w-60" src="../assets/img/Footer/medium.png"></img></span></a></li>
 
