--- a/wedding/seating.html
+++ b/wedding/seating.html
@@ -173,7 +173,7 @@
         </div>
     </nav>
 
-    <div id="home" class="intro route bg-image" style="background-image: url(../assets/img/seating.jpg)">
+    <div id="home" class="intro route bg-image" style="background-image: url(../assets/img/eng1.jpg)">
         <div class="overlay-itro"></div>
         <div class="intro-content display-table">
             <div class="table-cell">
@@ -414,6 +414,21 @@
             <div class="container">
                 <div class="title-box text-center">
                     <h3 class="title-a">Seating Chart</h3>
+
+                    <div id="home" class="intro route bg-image"
+                        style="background-image: url(../assets/img/seating.jpg)">
+                        <div class="overlay-itro"></div>
+                        <div class="intro-content display-table">
+                            <div class="table-cell">
+                                <div class="container">
+                                    <h1 class="intro-title mb-4">Seating</h1>
+                                    <p class="intro-subtitle"><span class="text-slider-items">04.27.2025, Mingle,
+                                            Enjoy</span><strong class="text-slider"></strong></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="line-mf"></div>
                     <div class="row">
                         <div id="tables" class="timeline">
