seating added better

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -414,19 +414,10 @@
     <section id="seating" class="about-mf sect-pt4 route">
       <div class="container">
         <div class="title-box text-center">
-          <h3 class="title-a">Seating Chart</h3>
+          <h3 class="title-a">Seating</h3>
 
-          <div id="home" class="intro route bg-image" style="background-image: url(../assets/img/seating.jpg)">
-            <div class="overlay-itro"></div>
-            <div class="intro-content display-table">
-              <div class="table-cell">
-                <div class="container">
-                  <h1 class="intro-title mb-4">Seating</h1>
-                  <p class="intro-subtitle"><span class="text-slider-items">04.27.2025, Mingle,
-                      Enjoy</span><strong class="text-slider"></strong></p>
-                </div>
-              </div>
-            </div>
+          <div class="about-img">
+            <img src="../assets/img/seating.jpg" class="img-fluid rounded b-shadow-a" alt="">
           </div>
 
           <div class="line-mf"></div>
