--- a/wedding/index.html
+++ b/wedding/index.html
@@ -214,7 +214,7 @@
                     <li>Photographer, DJ</li>
                   </ul>
                 </div>
-                <div class="responsible-person">Responsible: Vendors</div>
+                <div class="responsible-person">Aubrey&Brandon Thornsbury, DJ Gustave, Donna Lennox</div>
               </div>
 
               <div class="timeline-entry right">
@@ -226,7 +226,7 @@
                     <li>First look photos in White Dress</li>
                   </ul>
                 </div>
-                <div class="responsible-person">Responsible: Photographer</div>
+                <div class="responsible-person">Couple, Aubrey&Brandon Thornsbury</div>
               </div>
 
               <div id="ceremony" class="timeline-entry left">
@@ -240,7 +240,7 @@
                     <li>Michael ~ take Traditional cloths to car</li>
                   </ul>
                 </div>
-                <div class="responsible-person">Responsible: Hosts, Michael</div>
+                <div class="responsible-person">All, Jaelynn Thomas (host)</div>
               </div>
 
               <div class="timeline-entry right">
@@ -248,12 +248,31 @@
                 <div class="timeline-title">Ceremony Starts</div>
                 <div class="timeline-description">
                   <ul>
-                    <li>Michael and Jeremy enter</li>
-                    <li>Processional - Judith Singing</li>
+                    <li>Michael and Jeremy (enter)</li>
+                    <li>Processional</li>
                   </ul>
                 </div>
-                <div class="responsible-person">Responsible: Michael, Jeremy, Judith</div>
+                <div class="responsible-person">Judith Anane (singing)</div>
               </div>
+
+              <div class="timeline-entry right">
+                <div class="timeline-time">4:10 PM</div>
+                <div class="timeline-title">Ceremony</div>
+                <div class="timeline-description">
+                  <ul>
+                    <li>Statement of Purpose</li>
+                    <li>Declaration of Consent</li>
+                    <li>Sermon</li>
+                    <li>Exchange of Vows</li>
+                    <li>Nuptial Kiss & Jumping Broom</li>
+                    <li>Benediction</li>
+                    <li>Recessional</li>
+                    <li>Announcements</li>
+                  </ul>
+                </div>
+                <div class="responsible-person">Jeremy Caskey</div>
+              </div>
+
 
               <div id="reception" class="timeline-entry left">
                 <div class="timeline-time">5:00 PM</div>
